--- a/FreeAIr/UI/ToolWindows/BuildNaturalLanguageOutlinesTreeToolWindowControl.xaml
+++ b/FreeAIr/UI/ToolWindows/BuildNaturalLanguageOutlinesTreeToolWindowControl.xaml
@@ -46,6 +46,7 @@
                 Grid.Column="0"
                 FontFamily="Cascadia Code"
                 VerticalAlignment="Center"
+                Margin="0,0,10,0"
                 Text="{x:Static resources:Resources.Natural_Language_Outlines_file_path}"
                 />
             <Button
